--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-runtime": "^6.0.0",
     "kuzzle-sdk": "^1.8.0",
     "node-deezer": "^0.3.3",
+    "style-loader": "^0.13.1",
     "vue": "^1.0.21",
     "vue-google-maps": "^0.1.17",
     "vue-router": "^0.7.13"
